# DevMark-GrowthOS

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROMPT_CODEX_DEVMARK_GROWTHOS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_unique_approval_per_version_stage.py  0003_client_membership_scope.py  0004_secure_identity.py  0005_catalogs_media_presets.py  0006_strategy_calendar.py  0007_content_approvals_publication.py  0008_legacy_visual_approvals.py
backend/growthos/: __init__.py  config.py  database.py  dependencies.py  main.py  rate_limit.py  schemas.py  schemas_catalog.py  schemas_identity.py  schemas_media.py  schemas_planning.py  schemas_reports.py  security.py  seed.py
backend/growthos/api/: __init__.py  router.py
backend/growthos/api/routes/: __init__.py  audit_logs.py  auth.py  businesses.py  health.py  (+9 more)
backend/growthos/domain/: __init__.py  content.py  enums.py  permissions.py
backend/growthos/models/: __init__.py  access.py  base.py  business.py  catalog.py  content.py  identity.py  operations.py  planning.py
backend/growthos/services/: __init__.py  audit.py  email_jobs.py  notifications.py  providers.py  storage.py  strategy_provider.py  tokens.py  visual_prompts.py
backend/tests/: __init__.py  conftest.py  test_auth_and_businesses.py  test_client_visibility.py  test_config_guardrails.py  test_content_openapi_contract.py  test_domain.py  test_permissions.py  test_phase2_catalogs.py  test_phase2_content.py  test_phase2_identity.py  test_phase2_media.py  test_phase2_planning.py  test_phase2_reports.py  test_providers.py  test_security_boundaries.py  test_seed.py  test_tenant_isolation.py  test_tokens.py  test_vertical_flow.py  test_visual_prompts.py
worker/: Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
worker/src/growthos_worker/: __init__.py  __main__.py  handlers.py  healthcheck.py  jobs.py  logging.py  main.py  repository.py  service.py  settings.py
worker/tests/: test_handlers.py  test_service.py  test_settings.py
(+114 files in other folders)
