[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "devmark-growthos-backend"
version = "0.1.0"
description = "API do DevMark GrowthOS"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pwdlib[argon2]>=0.2,<1",
  "pydantic-settings>=2.7,<3",
  "PyJWT>=2.10,<3",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
growthos-seed = "growthos.seed:main"

[tool.hatch.build.targets.wheel]
packages = ["growthos"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".test-deps", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
