[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "growthos-worker"
version = "0.1.0"
description = "Worker transacional do DevMark GrowthOS"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
growthos-worker = "growthos_worker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["growthos_worker"]

[[tool.mypy.overrides]]
module = ["growthos", "growthos.*"]
ignore_missing_imports = true
